app-deployments/second-page-app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-second
  namespace: second-page-app
spec:
  stripPrefix:
    prefixes:
      - /second
