app-deployments/second-page-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: second-page-app
  labels:
    pod-security.kubernetes.io/enforce: restricted
