app-deployments/second-page-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-page-app-svc
  namespace: second-page-app
spec:
  selector:
    app: second-page-app-deployment
  ports:
    - name: http
      port: 80
      targetPort: http
