app-deployments/second-page-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx
  namespace: hello-web
spec:
  ingressClassName: traefik
  rules:
    - host: second.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-nginx
                port:
                  name: http
